# bootstrap-python-package

./: .bandit.yml  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/: CONTRIBUTING.md
.github/workflows/: github-pages-dev.yml  github-pages.yml  python-3.10.yml  python-3.11.yml  python-3.12.yml  python-3.8.yml  python-3.9.yml  python-bandit.yml  python-code-style.yml  python-lint.yml  python-quality.yml  python-tests.yml  python-typing.yml  release.yml  reusable-github-pages.yml  reusable-python-test.yml
0.1/: 404.html  index.html  objects.inv
0.1/adr/adr-template/: index.html
0.1/search/: search_index.json
bootstrap_python_package/: __init__.py
ci-scripts/: docs-version.sh  gen_pages.py
dev/: 404.html  index.html  objects.inv
dev/API-Reference/: index.html
dev/API-Reference/version/: index.html
dev/adr/0001-record-architecture-decisions/: index.html
dev/adr/adr-template/: index.html
dev/adr/summary/: index.html
dev/search/: search_index.json
docs/: .pages  index.md
mkdocs-overrides/: main.html
scripts/: docs-version.sh  gen_pages.py  version_from_git.py
tests/: __init__.py  test_bootstrap.py
