[tool.poetry]
name = "bootstrap-python-package"
version = "0.0.0"
description = "A manager to easily handle multiple SQLAlchemy configurations"
license = "MIT"
authors = ["Federico Busetti <729029+febus982@users.noreply.github.com>"]
repository = "https://github.com/febus982/bootstrap-python-package"
homepage = "https://febus982.github.io/bootstrap-python-package"
readme = "README.md"
packages = [{include = "bootstrap_python_package"}]
#keywords = ["add", "keywords", "here"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
aiosqlite = ">=0.18.0"
coverage = ">=6.5.0"
black = ">=22.10.0"
mkdocs = ">=1.4.3"
mkdocs-material = ">=9.1.16"
mypy = ">=0.990"
pytest = ">=7.2.0"
pytest-asyncio = ">=0.20.3"
pytest-cov = ">=4.0.0"
pytest-factoryboy = ">=2.5.0"
pytest-xdist = ">=3.0.2"
ruff = ">=0.0.263"
pymdown-extensions = ">=10.0.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
addopts = "-n auto --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.mypy]
files = "bootstrap_python_package"

[tool.coverage.run]
branch = true
source = ["bootstrap_python_package"]
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "pass",
    "\\.\\.\\.",
    ]


[tool.ruff]
select = ["E", "F", "I"]
extend-exclude = ["docs"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
files = '''
(
  bootstrap_python_package
  tests
)
'''
extend-exclude = '''
(
  /docs
)
'''
